Build out audio player

--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "chart.js": "^3.4.1",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-audio-player": "^0.17.0",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
-    "react-tiny-fab": "^4.0.3",
+    "react-spinkit": "^3.0.0",
     "react-tsparticles": "^1.30.4",
     "tsparticles": "^1.30.4",
     "web-vitals": "^1.1.2"
