--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-audio-player": "^0.17.0",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.4",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
