--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.4.1",
     "framer-motion": "^4.1.17",
+    "i18next": "^20.3.5",
     "react": "^17.0.2",
     "react-audio-player": "^0.17.0",
     "react-chartjs-2": "^3.0.3",
