--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.11.4",
     "react-icons": "^4.2.0",
+    "react-responsive-carousel": "^3.2.20",
     "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
     "react-spinkit": "^3.0.0",
