--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://dialogues.farmradio.org",
   "dependencies": {
+    "@brainhubeu/react-carousel": "^2.0.4",
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11.4.0",
@@ -20,7 +21,6 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.11.4",
     "react-icons": "^4.2.0",
-    "react-responsive-carousel": "^3.2.20",
     "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
     "react-spinkit": "^3.0.0",
