--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "visualization-playground",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "private": true,
-  "homepage": "https://dialogues.farmradio.org",
+  "homepage": "https://farmradiohangar.github.io/visualisation-page2",
   "dependencies": {
     "@brainhubeu/react-carousel": "^2.0.4",
     "@chakra-ui/icons": "^1.0.13",
